ajout du headeur en html et des proprieter css +ajout de sass et du fichier scss

--- a/index.html
+++ b/index.html
@@ -13,8 +13,20 @@
     <script src="https://kit.fontawesome.com/b6ad1e69d8.js" crossorigin="anonymous"></script>
     <title>Acceuil - ohmyfood</title>
 </head>
-
-
+        <!--header-->
+        <header class="head">
+            <div class="head-logo"><img src="./image/logo/ohmyfood@2x.svg" alt="logo">
+            </div>
+        </header>
+        <!--localisation-->
+    <main>
+        <div class="restaurant-local">
+            <div class="restaurant-local-recherche">
+                <i class="fas fa-map-marker-alt"></i></div>
+            <div class="restaurant-position">
+                <p>Paris, Belleville</p></div>
+        </div>
+    </main>
 <body>
 
 </body>
