ajout de la section explorer + fonctionnement du site

--- a/index.html
+++ b/index.html
@@ -20,12 +20,39 @@
         </header>
         <!--localisation-->
     <main>
-        <div class="restaurant-local">
-            <div class="restaurant-local-recherche">
-                <i class="fas fa-map-marker-alt"></i></div>
-            <div class="restaurant-position">
-                <p>Paris, Belleville</p></div>
-        </div>
+            <div class="restaurant-local">
+                <div class="restaurant-local-recherche">
+                    <i class="fas fa-map-marker-alt"></i></div>
+                <div class="restaurant-position">
+                    <p>Paris, Belleville</p></div>
+            </div>
+                <!--exploration des reservation-->
+        <section class="reservation">
+            <h1 class="reservation-titre">Réservez le menu qui <br/> vous convient</h1>
+            <p class="reservation-texte">Découvrez des restaurants d'exception séléctionnés par nos soins.</p>
+            <button class="bouton-explorer">Explorer nos restaurants</button>
+        </section>
+            <!--fonctionnement-->
+        <section class="fonctionnement">
+            <h2 class="titre-fonctionnement">Fonctionnement</h2>
+            <div class="fonctionnement-total">    
+                <div class="fonctionnement-onglet">
+                    <span class="fonctionnement-numero">1</span>
+                    <span class="fonctionnement-logo"><i class="fas fa-mobile-alt"></i></span>
+                    <span class="fonctionnement-paragraphe">Choisissez un restaurants</span>
+                </div>
+                <div class="fonctionnement-onglet">
+                    <span class="fonctionnement-numero">2</span>
+                    <span class="fonctionnement-logo"><i class="fas fa-list-ul"></i></span>
+                    <span class="fonctionnement-paragraphe">Composez votre menu</span>
+                </div>
+                <div class="fonctionnement-onglet">
+                    <span class="fonctionnement-numero">3</span>
+                    <span class="fonctionnement-logo"><i class="fas fa-store"></i></span>
+                    <span class="fonctionnement-paragraphe">Dégustez au restaurant</span>
+                </div>
+                </div>
+        </section>
     </main>
 <body>
 
