correction de certaine image + ajout de l'entree note enchanté

--- a/Menu/Menu-a-la-francaise.html
+++ b/Menu/Menu-a-la-francaise.html
@@ -14,4 +14,11 @@
 
 </head>
 <body>
+   <!--header-->
+    <header class="head">
+        <a href="../index.html" class="icon-retours"><i class="fas fa-arrow-left retours"></i></a>
+        <div class="head-logo"><img src="../image/logo/ohmyfood@2x.svg" alt="logo"></div>
+ 
+    </header>
+    <img class="banniere" src="../image/restaurant/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="banniere">
 </body>
