--- a/Menu/Menu-le-delice-des-sens.html
+++ b/Menu/Menu-le-delice-des-sens.html
@@ -13,4 +13,11 @@
     <title>Menu - Le délice des sens</title>
 </head>
 <body>
+            <!--header-->
+    <header class="head">
+        <a href="../index.html" class="icon-retours"><i class="fas fa-arrow-left retours"></i></a>
+        <div class="head-logo"><img src="../image/logo/ohmyfood@2x.svg" alt="logo"></div>
+ 
+    </header>
+    <img class="banniere" src="../image/restaurant/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="banniere">
 </body>
