--- a/Menu/menu-la-palette-du-gout.html
+++ b/Menu/menu-la-palette-du-gout.html
@@ -13,4 +13,13 @@
     <title>Menu - La palette du goût</title>
 </head>
 <body>
+       <!--header-->
+   <header class="head">
+    <a href="../index.html" class="icon-retours"><i class="fas fa-arrow-left retours"></i></a>
+    <div class="head-logo">
+        <img src="../image/logo/ohmyfood@2x.svg" alt="logo"></div>
+ 
+    </header>
+    <img class="banniere" src="../image/restaurant/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="banniere">
+    
 </body>
