--- a/Menu/Menu-la-note-enchante.html
+++ b/Menu/Menu-la-note-enchante.html
@@ -134,8 +134,23 @@
                         <div class="confirmation">
                             <div class="logo-confirmation">
                             <i class="fa-check fas icon-centre"></i></div></div></div>
+
             </div>
         </section>
+                 <!--commander-->
+                 <div class="bouton-commander">
+                    <button class="commander">Commander</button>
+                </div>
+
     </div>
-    </main>    
+    </main>
+        <!--footer-->
+        <footer class="footer">
+            <div class="footer-total"> 
+              <h3 id="footer-titre">ohmyfood</h3>
+              <a href="#" class="footer-lien"><span class="footer-icon"><i class="fas fa-utensils"></i></span>Proposer un restaurant</a>
+              <a href="#" class="footer-lien"><span class="footer-icon2"><i class="fas fa-hands-helping"></i></span>Devenir partenaire</a>
+              <a href="#" class="footer-lien">Mention legales</a>
+              <a href="mailto:ohmyfood@service.com" class="footer-lien">Contact</a></div> 
+          </footer>    
 </body>
