--- a/Menu/Menu-La-Palette-du-gout.html
+++ b/Menu/Menu-La-Palette-du-gout.html
@@ -23,7 +23,7 @@
     <img class="banniere" src="../image/restaurant/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="banniere">
        <!--headeur-menu-->
    <main class="menu">
-    <header class="head-menu"><h2 class="head-menu-titre">À la française</h2>
+    <header class="head-menu"><h2 class="head-menu-titre">La palette du goût</h2>
      <label class="coeurcheck">
          <input type="checkbox">
          <span class="fas fa-heart check"></span>
