correction des détail de l'acceuil

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 <main>
     <div class="restaurant-local">
         <div class="restaurant-local-recherche">
-            <i class="fas fa-map-marker-alt"></i>
+            <i class="fas fa-map-marker-alt icon-localisation"></i>
         </div>
         <div class="restaurant-position">
-            <p>Paris, Belleville</p>
+            <p class="restaurant-paragraphe" >Paris, Belleville</p>
         </div>
     </div>
     <!--exploration des reservation-->
@@ -41,17 +41,17 @@
         <div class="fonctionnement-total">
             <div class="fonctionnement-onglet">
                 <span class="fonctionnement-numero">1</span>
-                <span class="fonctionnement-logo"><i class="fas fa-mobile-alt"></i></span>
+                <span class="fonctionnement-logo"><i class="fas fa-mobile-alt icon-fonctionnement"></i></span>
                 <span class="fonctionnement-paragraphe">Choisissez un restaurants</span>
             </div>
             <div class="fonctionnement-onglet">
                 <span class="fonctionnement-numero">2</span>
-                <span class="fonctionnement-logo"><i class="fas fa-list-ul"></i></span>
+                <span class="fonctionnement-logo"><i class="fas fa-list-ul icon-fonctionnement"></i></span>
                 <span class="fonctionnement-paragraphe">Composez votre menu</span>
             </div>
             <div class="fonctionnement-onglet">
                 <span class="fonctionnement-numero">3</span>
-                <span class="fonctionnement-logo"><i class="fas fa-store"></i></span>
+                <span class="fonctionnement-logo"><i class="fas fa-store icon-fonctionnement"></i></span>
                 <span class="fonctionnement-paragraphe">Dégustez au restaurant</span>
             </div>
         </div>
