correction des détail + animation palette du gout

--- a/Menu/Menu-La-Palette-du-gout.html
+++ b/Menu/Menu-La-Palette-du-gout.html
@@ -56,7 +56,7 @@
                      <div class="choix-box apparition3">
                          <div class="titreETingredient">
                              <h4 class="titre-plat">Oeuf au plat</h4>
-                             <p class="ingredient">Assaisonné à la truffe sur lit de...</p></div>
+                             <p class="ingredient">Assaisonné à la truffe sur lit de caviar</p></div>
                          <p class="prix">20€</p>
                           <div class="confirmation">
                              <div class="logo-confirmation">
