--- a/Menu/Menu-la-note-enchante.html
+++ b/Menu/Menu-la-note-enchante.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../Menu-css/menu-la-note-enchante.css">
+    <link rel="stylesheet" type="text/css" href="../Menu-css/styles-menu.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400&display=swap" rel="stylesheet">   
@@ -18,7 +18,7 @@
         <a href="../index.html" class="icon-retours"><i class="fas fa-arrow-left retours"></i></a>
         <div class="head-logo"><img src="../image/logo/ohmyfood@2x.svg" alt="logo"></div>
     </header>
-    <img class="banniere" src="../image/restaurant/stil-u2Lp8tXIcjw-unsplash.jpg" alt="banniere">
+    <img class="banniere-note-enchante" src="../image/restaurant/stil-u2Lp8tXIcjw-unsplash.jpg" alt="banniere">
         <!--headeur-menu-->
    <main class="menu">
     <header class="head-menu"><h2 class="head-menu-titre">La note enchantée</h2>
@@ -31,7 +31,7 @@
     <!--entree-->
     <div class="entree-plat-dessert">
         <section class="entree">
-            <h3 class="titre-section titre-section1">entrées</h3>
+            <h3 class="titre-section titre-section-enchante-1">entrées</h3>
             <div class="total-entree">
                 <div class="choix-box apparition1">
                     <div class="titreETingredient">
@@ -73,7 +73,7 @@
             </section>
                         <!--Plat-->
         <section class="plat">
-            <h3 class="titre-section titre-section2">Plats</h3>
+            <h3 class="titre-section titre-section-enchante-2">Plats</h3>
             <div class="total-plat">
                 <div class="choix-box apparition5">
                     <div class="titreETingredient">
@@ -106,7 +106,7 @@
             </section>
             <!--dessert-->
         <section class="dessert">
-            <h3 class="titre-section titre-section3">Desserts</h3>
+            <h3 class="titre-section titre-section-enchante-3">Desserts</h3>
             <div class="total-dessert">
                 <div class="choix-box apparition8">
                     <div class="titreETingredient">
