--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/b6ad1e69d8.js" crossorigin="anonymous"></script>
-    <title>Acceuil - ohmyfood</title>
+    <title>Accueil - ohmyfood</title>
 </head>
 <body>
 <!--header-->
