--- a/index.html
+++ b/index.html
@@ -13,7 +13,21 @@
     <script src="https://kit.fontawesome.com/b6ad1e69d8.js" crossorigin="anonymous"></script>
     <title>Accueil - ohmyfood</title>
 </head>
+
+
 <body>
+    <!--loader-->
+    <div class="loader">
+        <span class="lettre delay1">o</span>
+        <span class="lettre delay2">h</span>               
+        <span class="lettre delay3">m</span>               
+        <span class="lettre delay4">y</span>               
+        <span class="lettre delay5">f</span>               
+        <span class="lettre delay6">o</span>               
+        <span class="lettre delay7">o</span>               
+        <span class="lettre delay8">d</span>               
+    </div>
+ 
 <!--header-->
 <header class="head">
     <div class="head-logo"><img src="./image/logo/ohmyfood@2x.svg" alt="logo">
