--- a/Menu/Menu-la-note-enchante.html
+++ b/Menu/Menu-la-note-enchante.html
@@ -20,7 +20,7 @@
     </header>
     <img class="banniere-note-enchante" src="../image/restaurant/stil-u2Lp8tXIcjw-unsplash.jpg" alt="banniere">
         <!--headeur-menu-->
-   <main class="menu">
+   <main class="menu-enchante">
     <header class="head-menu"><h2 class="head-menu-titre">La note enchantée</h2>
      <label class="coeurcheck">
          <input type="checkbox">
