--- a/Menu/Menu-la-note-enchante.html
+++ b/Menu/Menu-la-note-enchante.html
@@ -20,7 +20,7 @@
     </header>
     <img class="banniere-note-enchante" src="../image/restaurant/stil-u2Lp8tXIcjw-unsplash.jpg" alt="banniere">
         <!--headeur-menu-->
-   <main class="menu-enchante">
+   <main class="menu">
     <header class="head-menu"><h2 class="head-menu-titre">La note enchantée</h2>
      <label class="coeurcheck">
          <input type="checkbox">
@@ -31,7 +31,7 @@
     <!--entree-->
     <div class="entree-plat-dessert">
         <section class="entree">
-            <h3 class="titre-section titre-section-enchante-1">entrées</h3>
+            <h3 class="titre-section titre-section1">entrées</h3>
             <div class="total-entree">
                 <div class="choix-box apparition1">
                     <div class="titreETingredient">
@@ -73,7 +73,7 @@
             </section>
                         <!--Plat-->
         <section class="plat">
-            <h3 class="titre-section titre-section-enchante-2">Plats</h3>
+            <h3 class="titre-section titre-section1">Plats</h3>
             <div class="total-plat">
                 <div class="choix-box apparition5">
                     <div class="titreETingredient">
@@ -106,7 +106,7 @@
             </section>
             <!--dessert-->
         <section class="dessert">
-            <h3 class="titre-section titre-section-enchante-3">Desserts</h3>
+            <h3 class="titre-section titre-section1">Desserts</h3>
             <div class="total-dessert">
                 <div class="choix-box apparition8">
                     <div class="titreETingredient">
