revue d'une mixin + revue de certain element html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400&display=swap"
+        rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/b6ad1e69d8.js" crossorigin="anonymous"></script>
     <title>Accueil - ohmyfood</title>
@@ -19,134 +21,140 @@
     <!--loader-->
     <div class="loader">
         <span class="lettre delay1">o</span>
-        <span class="lettre delay2">h</span>               
-        <span class="lettre delay3">m</span>               
-        <span class="lettre delay4">y</span>               
-        <span class="lettre delay5">f</span>               
-        <span class="lettre delay6">o</span>               
-        <span class="lettre delay7">o</span>               
-        <span class="lettre delay8">d</span>               
+        <span class="lettre delay2">h</span>
+        <span class="lettre delay3">m</span>
+        <span class="lettre delay4">y</span>
+        <span class="lettre delay5">f</span>
+        <span class="lettre delay6">o</span>
+        <span class="lettre delay7">o</span>
+        <span class="lettre delay8">d</span>
     </div>
- 
-<!--header-->
-<header class="head">
-    <div class="head-logo"><img src="./image/logo/ohmyfood@2x.svg" alt="logo">
-    </div>
-</header>
-<!--localisation-->
-<main>
-    <div class="restaurant-local">
-        <div class="restaurant-local-recherche">
-            <i class="fas fa-map-marker-alt icon-localisation"></i>
-        </div>
-        <div class="restaurant-position">
-            <p class="restaurant-paragraphe" >Paris, Belleville</p>
-        </div>
-    </div>
-    <!--exploration des reservation-->
-    <section class="reservation">
-        <h1 class="reservation-titre">Réservez le menu qui <br /> vous convient</h1>
-        <p class="reservation-texte">Découvrez des restaurants d'exception séléctionnés par nos soins.</p>
-        <button class="bouton-explorer">Explorer nos restaurants</button>
-    </section>
-    <!--fonctionnement-->
-    <section class="fonctionnement">
-        <h2 class="titre-fonctionnement">Fonctionnement</h2>
-        <div class="fonctionnement-total">
-            <div class="fonctionnement-onglet">
-                <span class="fonctionnement-numero">1</span>
-                <span class="fonctionnement-logo"><i class="fas fa-mobile-alt icon-fonctionnement"></i></span>
-                <span class="fonctionnement-paragraphe">Choisissez un restaurants</span>
-            </div>
-            <div class="fonctionnement-onglet">
-                <span class="fonctionnement-numero">2</span>
-                <span class="fonctionnement-logo"><i class="fas fa-list-ul icon-fonctionnement"></i></span>
-                <span class="fonctionnement-paragraphe">Composez votre menu</span>
-            </div>
-            <div class="fonctionnement-onglet">
-                <span class="fonctionnement-numero">3</span>
-                <span class="fonctionnement-logo"><i class="fas fa-store icon-fonctionnement"></i></span>
-                <span class="fonctionnement-paragraphe">Dégustez au restaurant</span>
-            </div>
-        </div>
-    </section>
-    <!--carte-restaurant-->
-    <section class="restaurant">
-        <div class="restaurant-taille">
-            <h2 class="titre-restaurant">Restaurants</h2>
-            <div class="restaurant-total">
-                <div class="restaurant-box-x2">
-                    <div class="restaurant-box">
-                        <a href="./Menu/Menu-La-Palette-du-gout.html"><img class="taille-image"
-                                src="./image/restaurant/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="palette du gout">
-                            <span class="nouveau">nouveau</span>
-                            <h3 class="restaurant-nom">La Palette du goût</h3>
-                            <p class="restaurant-situer">Ménilmontant</p>
-                        </a>
-                        <label class="coeurcheck">
-                            <input type="checkbox">
-                            <span class="fas fa-heart check"></span>
-                            <span class="far fa-heart uncheck"></span>
-                        </label>
-                    </div>
-                    <div class="restaurant-box">
 
-                        <a href="./Menu/Menu-la-note-enchante.html"><img class="taille-image"
-                                src="./image/restaurant/stil-u2Lp8tXIcjw-unsplash.jpg" alt="la note enchante">
-                            <span class="nouveau">nouveau</span>
-                            <h3 class="restaurant-nom">La note enchantée</h3>
-                            <p class="restaurant-situer">Charonne</p>
-                        </a>
-                        <label class="coeurcheck">
-                            <input type="checkbox">
-                            <span class="fas fa-heart check"></span>
-                            <span class="far fa-heart uncheck"></span>
-                        </label>
-                    </div>
+    <!--header-->
+    <header class="head">
+        <div class="head-logo"><img src="./image/logo/ohmyfood@2x.svg" alt="logo">
+        </div>
+    </header>
+
+    <main>
+        <!--localisation-->
+        <section class="restaurant-local">
+            <div class="restaurant-local-recherche">
+                <i class="fas fa-map-marker-alt icon-localisation"></i>
+            </div>
+            <div class="restaurant-position">
+                <p class="restaurant-paragraphe">Paris, Belleville</p>
+            </div>
+        </section>
+        <!--exploration des reservation-->
+        <section class="reservation">
+            <h1 class="reservation-titre">Réservez le menu qui <br /> vous convient</h1>
+            <p class="reservation-texte">Découvrez des restaurants d'exception séléctionnés par nos soins.</p>
+            <button class="bouton-explorer">Explorer nos restaurants</button>
+        </section>
+        <!--fonctionnement-->
+        <section class="fonctionnement">
+            <h2 class="titre-fonctionnement">Fonctionnement</h2>
+            <div class="fonctionnement-total">
+                <div class="fonctionnement-onglet">
+                    <span class="fonctionnement-numero">1</span>
+                    <span class="fonctionnement-logo"><i class="fas fa-mobile-alt icon-fonctionnement"></i></span>
+                    <span class="fonctionnement-paragraphe">Choisissez un restaurants</span>
                 </div>
-                <div class="restaurant-box2-x2">
-                    <div class="restaurant-box2">
-
-                        <a href="./Menu/Menu-a-la-francaise.html"><img class="taille-image"
-                                src="./image/restaurant/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="a la francaise">
-                            <h3 class="restaurant-nom">À la française</h3>
-                            <p class="restaurant-situer">Cité Rouge</p>
-                        </a>
-                        <label class="coeurcheck">
-                            <input type="checkbox">
-                            <span class="fas fa-heart check"></span>
-                            <span class="far fa-heart uncheck"></span>
-                        </label>
-                    </div>
-                    <div class="restaurant-box2">
-
-                        <a href="./Menu/Menu-le-delice-des-sens.html"><img class="taille-image"
-                                src="./image/restaurant/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="le delice des sens">
-                            <h3 class="restaurant-nom">Le délice des sens</h3>
-                            <p class="restaurant-situer">Folie-Méricourt</p>
-                        </a>
-                        <label class="coeurcheck">
-                            <input type="checkbox">
-                            <span class="fas fa-heart check"></span>
-                            <span class="far fa-heart uncheck"></span>
-                        </label>
-                    </div>
+                <div class="fonctionnement-onglet">
+                    <span class="fonctionnement-numero">2</span>
+                    <span class="fonctionnement-logo"><i class="fas fa-list-ul icon-fonctionnement"></i></span>
+                    <span class="fonctionnement-paragraphe">Composez votre menu</span>
                 </div>
-
+                <div class="fonctionnement-onglet">
+                    <span class="fonctionnement-numero">3</span>
+                    <span class="fonctionnement-logo"><i class="fas fa-store icon-fonctionnement"></i></span>
+                    <span class="fonctionnement-paragraphe">Dégustez au restaurant</span>
+                </div>
             </div>
-        </div>
+        </section>
+        <!--carte-restaurant-->
+        <section class="restaurant">
+            <div class="restaurant-taille">
+                <h2 class="titre-restaurant">Restaurants</h2>
+                <div class="restaurant-total">
+                    <div class="restaurant-box-x2">
+                        <div class="restaurant-box">
+                            <a href="./Menu/Menu-La-Palette-du-gout.html"><img class="taille-image"
+                                    src="./image/restaurant/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                                    alt="palette du gout">
+                                <span class="nouveau">nouveau</span>
+                                <h3 class="restaurant-nom">La Palette du goût</h3>
+                                <p class="restaurant-situer">Ménilmontant</p>
+                            </a>
+                            <label class="coeurcheck">
+                                <input type="checkbox">
+                                <span class="fas fa-heart check"></span>
+                                <span class="far fa-heart uncheck"></span>
+                            </label>
+                        </div>
+                        <div class="restaurant-box">
 
-    </section>
+                            <a href="./Menu/Menu-la-note-enchante.html"><img class="taille-image"
+                                    src="./image/restaurant/stil-u2Lp8tXIcjw-unsplash.jpg" alt="la note enchante">
+                                <span class="nouveau">nouveau</span>
+                                <h3 class="restaurant-nom">La note enchantée</h3>
+                                <p class="restaurant-situer">Charonne</p>
+                            </a>
+                            <label class="coeurcheck">
+                                <input type="checkbox">
+                                <span class="fas fa-heart check"></span>
+                                <span class="far fa-heart uncheck"></span>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="restaurant-box2-x2">
+                        <div class="restaurant-box2">
+
+                            <a href="./Menu/Menu-a-la-francaise.html"><img class="taille-image"
+                                    src="./image/restaurant/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="a la francaise">
+                                <h3 class="restaurant-nom">À la française</h3>
+                                <p class="restaurant-situer">Cité Rouge</p>
+                            </a>
+                            <label class="coeurcheck">
+                                <input type="checkbox">
+                                <span class="fas fa-heart check"></span>
+                                <span class="far fa-heart uncheck"></span>
+                            </label>
+                        </div>
+                        <div class="restaurant-box2">
+
+                            <a href="./Menu/Menu-le-delice-des-sens.html"><img class="taille-image"
+                                    src="./image/restaurant/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                                    alt="le delice des sens">
+                                <h3 class="restaurant-nom">Le délice des sens</h3>
+                                <p class="restaurant-situer">Folie-Méricourt</p>
+                            </a>
+                            <label class="coeurcheck">
+                                <input type="checkbox">
+                                <span class="fas fa-heart check"></span>
+                                <span class="far fa-heart uncheck"></span>
+                            </label>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+        </section>
         <!--footer-->
         <footer class="footer">
-            <div class="footer-total"> 
-              <h3 id="footer-titre">ohmyfood</h3>
-              <a href="#" class="footer-lien"><span class="footer-icon"><i class="fas fa-utensils"></i></span>Proposer un restaurant</a>
-              <a href="#" class="footer-lien"><span class="footer-icon2"><i class="fas fa-hands-helping"></i></span>Devenir partenaire</a>
-              <a href="#" class="footer-lien">Mention legales</a>
-              <a href="mailto:ohmyfood@service.com" class="footer-lien">Contact</a></div> 
-          </footer>
-</main>
+            <div class="footer-total">
+                <h3 id="footer-titre">ohmyfood</h3>
+                <a href="#" class="footer-lien"><span class="footer-icon"><i class="fas fa-utensils"></i></span>Proposer
+                    un restaurant</a>
+                <a href="#" class="footer-lien"><span class="footer-icon2"><i
+                            class="fas fa-hands-helping"></i></span>Devenir partenaire</a>
+                <a href="#" class="footer-lien">Mention legales</a>
+                <a href="mailto:ohmyfood@service.com" class="footer-lien">Contact</a>
+            </div>
+        </footer>
+    </main>
 
 
 
