changement d'une section en div

--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
 
     <main>
         <!--localisation-->
-        <section class="restaurant-local">
+        <div class="restaurant-local">
             <div class="restaurant-local-recherche">
                 <i class="fas fa-map-marker-alt icon-localisation"></i>
             </div>
             <div class="restaurant-position">
                 <p class="restaurant-paragraphe">Paris, Belleville</p>
             </div>
-        </section>
+        </div>
         <!--exploration des reservation-->
         <section class="reservation">
             <h1 class="reservation-titre">Réservez le menu qui <br /> vous convient</h1>
